--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,18 +46,18 @@
   --radius: 0.625rem;
   --background: oklch(0.98 0.01 247);
   --foreground: oklch(0.27 0.06 260);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.129 0.042 264.695);
+  --card: var(--background);
+  --card-foreground: var(--foreground);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
   --primary: oklch(0.72 0.18 68.97);
   --primary-foreground: oklch(0.98 0.01 255);
   --secondary: oklch(0.968 0.007 247.896);
   --secondary-foreground: oklch(0.208 0.042 265.755);
-  --muted: oklch(0.968 0.007 247.896);
-  --muted-foreground: oklch(0.554 0.046 257.417);
-  --accent: oklch(0.968 0.007 247.896);
-  --accent-foreground: oklch(0.208 0.042 265.755);
+  --muted: oklch(0.95 0.02 250);
+  --muted-foreground: oklch(0.45 0.04 260);
+  --accent: oklch(0.72 0.18 68.97);
+  --accent-foreground: white;
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.929 0.013 255.508);
   --input: oklch(0.929 0.013 255.508);
@@ -80,18 +80,18 @@
 .dark {
   --background: oklch(0.23 0.03 260);
   --foreground: oklch(0.98 0.01 250);
-  --card: oklch(0.208 0.042 265.755);
-  --card-foreground: oklch(0.984 0.003 247.858);
+  --card: oklch(0.27 0.03 260);
+  --card-foreground: oklch(0.98 0.01 250);
   --popover: oklch(0.208 0.042 265.755);
   --popover-foreground: oklch(0.984 0.003 247.858);
   --primary: oklch(0.72 0.18 68.97);
   --primary-foreground: black;
-  --secondary: oklch(0.279 0.041 260.031);
-  --secondary-foreground: oklch(0.984 0.003 247.858);
-  --muted: oklch(0.279 0.041 260.031);
-  --muted-foreground: oklch(0.704 0.04 256.788);
-  --accent: oklch(0.279 0.041 260.031);
-  --accent-foreground: oklch(0.984 0.003 247.858);
+  --secondary: oklch(0.31 0.04 255)
+  --secondary-foreground: white;
+  --muted: oklch(0.31 0.04 255);
+  --muted-foreground: oklch(0.75 0.03 255);
+  --accent: oklch(0.72 0.18 68.97);
+  --accent-foreground: black;
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
